# todo_app

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-prod  README.md  docker-compose.yaml  pyproject.toml  token.json
app/: app.py  auth_utils.py  config.py  crud.py  deps.py  init_db.py  main.py  models.py  routes.py  schemas.py
app/crud/: task.py  user.py
app/models/: __init__.py  consts.py  enums.py  task.py  user.py
app/routes/: auth.py  social_auth.py  task.py  user.py
app/utils/: auth_utils.py  mail_utils.py  validators.py
tests/: conftest.py  test_auth.py  test_tasks.py
