[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Maria Kowalska <maria.j.kowalska@onet.pl>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
motor = "^3.1.2"
beanie = "^1.18.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
passlib = "^1.7.4"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
authlib = "^1.2.0"
itsdangerous = "^2.1.2"
httpx = "^0.24.0"
google-auth = "^2.17.3"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.86.0"
types-requests = "^2.28.11.17"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pytest-env = "^0.8.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=test"
]
